# Frame-interpolation

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
core/: utils.py
core/builders/: __init__.py  data_augmentation.py  flying_chairs_builder.py  input_data_builder.py
models/: __init__.py  flow_nets.py
scripts/: __main__.py  model_comparator.py  validation_data_loader.py
scripts/test_models/: old_models_flow_net.py
utils/: utils.py  visualizer.py
